# sopti

./: .cache  LICENSE  README.md  pyproject.toml
src/sopti/: __init__.py  __main__.py  cache.py  cli.py  config.py  database.py  downloader.py  models.py  orchestrator.py  playlist.py  spotify_api.py
src/sopti/spotdl_integration/: downloader.py  extractor.py
src/sopti/utils/: cli.py  logging.py  path_utils.py
tests/: test_cli_utils.py  test_downloader.py  test_orchestrator.py  test_playlist_extractor.py
