[project]
name = "sopti"
version = "0.1.2"
description = "Reliable Spotify playlist/profile downloader orchestrator built on spotdl"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Sopti Contributors" }]
license = { file = "LICENSE" }
keywords = ["spotify", "spotdl", "downloader", "music", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: Multimedia :: Sound/Audio",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
    "python-dotenv>=1.2.1",
    "spotdl>=4.4.3",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/yourname/sopti"
Documentation = "https://github.com/yourname/sopti#readme"

[project.scripts]
sopti = "sopti.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sopti"]

[tool.hatch.build.targets.sdist]
include = [
  "src/**",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]
